// Database diagram for BUILD.ING Document Management System
// This file uses DBML (Database Markup Language) syntax
// You can visualize this at https://dbdiagram.io/

Table users {
  user_id serial [pk]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  first_name varchar(50)
  last_name varchar(50)
  role varchar(20) [not null, default: 'viewer']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  last_login timestamp
  is_active boolean [default: true]
  organization_id integer [not null, ref: > organizations.organization_id]
}

Table buildings {
  building_id serial [pk]
  name varchar(100) [not null]
  address text
  construction_year integer
  total_area decimal(10,2)
  floors integer
  description text
  coordinates point
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  organization_id integer [not null, ref: > organizations.organization_id]
}

Table document_categories {
  category_id serial [pk]
  name varchar(50) [not null]
  description text
  parent_category_id integer [ref: > document_categories.category_id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table documents {
  document_id serial [pk]
  title varchar(255) [not null]
  file_path varchar(255) [not null]
  file_url text
  file_type varchar(20) [not null]
  file_size integer [not null]
  category_id integer [ref: > document_categories.category_id]
  building_id integer [ref: > buildings.building_id]
  uploaded_by integer [ref: > users.user_id]
  upload_date timestamp [default: `CURRENT_TIMESTAMP`]
  last_modified timestamp [default: `CURRENT_TIMESTAMP`]
  version varchar(20) [default: '1.0']
  status varchar(20) [default: 'draft']
  description text
  is_public boolean [default: false]
  metadata jsonb
}

Table document_tags {
  tag_id serial [pk]
  name varchar(50) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table document_tag_relations {
  document_id integer [ref: > documents.document_id]
  tag_id integer [ref: > document_tags.tag_id]
  
  indexes {
    (document_id, tag_id) [pk]
  }
}

Table document_permissions {
  document_id integer [ref: > documents.document_id]
  user_id integer [ref: > users.user_id]
  permission_type varchar(20) [default: 'read']
  granted_at timestamp [default: `CURRENT_TIMESTAMP`]
  granted_by integer [ref: > users.user_id]
  
  indexes {
    (document_id, user_id) [pk]
  }
}


Table organizations {
  organization_id serial [pk]
  name varchar(200) [unique, not null]
  description text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_active boolean [default: true]
}

Table building_document_relations {
  building_id integer [ref: > buildings.building_id]
  document_id integer [ref: > documents.document_id]
  relation_type varchar(50)
  
  indexes {
    (building_id, document_id) [pk]
  }
}
